Ajuste para ambiente docker