@@ -34,7 +34,6 @@ public class SecurityConfiguration {
         this.jwtRequestFilter = jwtRequestFilter;
     }
 
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
@@ -44,16 +43,14 @@ public class SecurityConfiguration {
                     .csrf(csrf -> csrf.disable())
                     .authorizeHttpRequests(auth -> auth
                             .requestMatchers("/auth", "/error", "/auth/**").permitAll()
-                            .anyRequest().authenticated()
-                    )
-                    // make sure we use stateless session; session won't be used to store user's state.
+                            .anyRequest().authenticated())
+                    // make sure we use stateless session; session won't be used to store user's
+                    // state.
                     .sessionManagement(session -> session
-                            .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                    )
+                            .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                     .addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class)
                     .exceptionHandling(exception -> exception
-                            .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
-                    );
+                            .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)));
         } else {
             http.authorizeHttpRequests((requests) -> requests.anyRequest().permitAll())
                     .csrf(csrf -> csrf.disable());
@@ -64,8 +61,10 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedOriginPatterns(List.of("http://localhost:4200", "https://localhost:4200"));
+        // configuration.setAllowedOrigins(List.of("*"));
+        List<String> allowedOrigins = Arrays.asList(System.getenv("LISTA_HOSTS").split(","));
+        System.out.println("Allowed origins: " + System.getenv("LISTA_HOSTS"));
+        configuration.setAllowedOriginPatterns(allowedOrigins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowCredentials(true); // para aceitar os login com cookies
         configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
